Fixed font smoothing and nav alignment

--- a/thinkful-front-end/Unit 1/startup-landing-page-clone/css/style.css
+++ b/thinkful-front-end/Unit 1/startup-landing-page-clone/css/style.css
@@ -58,8 +58,12 @@ table {
 
 /* Start my CSS */
 
+body {
+  -webkit-font-smoothing: antialiased;
+}
+
 .content {
-    padding: 0 15px;
+    padding: 0 84px;
     width: 970px;
     margin: 0 auto;
   }
@@ -88,7 +92,6 @@ table {
   color: #838994;
   font-size: 1.04rem;
   margin-top: 1.7rem;
-  -webkit-font-smoothing: antialiased;
 }
 
 .top-navigation .links li {
@@ -118,20 +121,21 @@ table {
 
 .introduction .content {
   text-align: center;
-  font-family: 'Roboto', sans-serif;
   color: #fff;
 }
 
 .introduction h1 {
   margin-top: 17.5rem;
+  font-family: 'Roboto', sans-serif;
   font-size: 3.125rem;
   font-weight: 300;
 }
 
 .introduction h3 {
   margin-top: 1.25rem;
+  font-family: 'Roboto', sans-serif;
   font-size: 1.563rem;
-  font-weight: 100;
+  font-weight: 300;
 }
 
 .big-button {
@@ -205,7 +209,11 @@ table {
   display: inline-block;
   margin: 1.25rem 5px;
   border: 1px solid #eaebec;
-  padding: 0.625rem 0;
+  padding: 0.7rem 0;
+}
+
+.social .icons li:hover {
+  cursor: pointer;
 }
 
 .social .twitter {
@@ -227,8 +235,8 @@ table {
 }
 
 .social .copy {
-  font-weight: 100;
   font-size: 0.9rem;
+  font-weight: 300;
   color: #838994;
 }
 
